--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   http: '>=0.11.3+12'
   shared_preferences: "^0.4.1"
+  flutter_webview_plugin: "^0.3.0+2"
+  event_bus: "^1.0.1"
 
 dev_dependencies:
   flutter_test:
@@ -41,10 +43,11 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  assets:
+    - images/ic_launcher_round.png
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
+#  assets:
+#    - images/ic_launcher_round.png
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
